# fm

./: .gitignore  Cargo.toml  Makefile  README.md  main.c
assets/: RUSH_E.txt  RedDwarf.txt  air.txt  bad-apple.txt  blue-danube.txt  brandenburg.txt  bwv1013.txt  bwv1041-violin.txt  bwv995.txt  campanella.txt  clair-de-lune.txt  crab.txt  csikospost.txt  echos.txt  electroman.txt  fantasia.txt  fishe.txt  froides.txt  gerudo-drums.txt  gerudo.txt  goldberg.txt  harpsichord5.txt  horse.txt  laputa.txt  meglovania.txt  merry-go-round.txt  night-of-nights.txt  nocturne.txt  passacaglia.txt  polonaise.txt  portal.txt  postu.txt  ricercar.txt  runescape.txt  song.txt  song2.txt  sonic.txt  test.txt  tetris.txt  toccata.txt  (+3 more)
songs/: test.crz
src/: common.h  envelope.c  envelope.h  export.c  export.h  filter.c  filter.h  font-data.h  font.c  font.h  main.rs  note.c  note.h  operator.c  operator.h  parse.c  parse.h  player.c  player.h  player.rs  song.c  song.h  song.rs  synth.c  synth.h  synth.rs  window.c  window.h  window.rs
src/synth/: effect.rs  mod.rs
src/window/: colour.rs  constants.rs  elements.rs  font.rs  mod.rs
tools/: make-font.py
