[package]
name = "cancrizans"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.13.5"
anyhow = "1.0.58"
nfd = "0.0.4"
serde_json = "1.0.82"

[dependencies.serde]
version = "1.0.140"
features = ["derive"]

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["unsafe_textures"]